--- a/Static/CSS/header.css
+++ b/Static/CSS/header.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
 
 .header {
-    background-color: #384D48;
+    background: linear-gradient(135deg, #a1c4fd, #c2e9fb);
     text-align: center; 
     height: 120px;
     align-items: center;
